objects/BMCServiceDesk__BMC_SoftwareServer__c.object
<CustomObject>
    <description>Class that represents a type of BMC_ApplicationSystem CI that provides dedicated server functionality through a running process (or processes) on a computer system. A CI of this type provides a single service to client applications or other systems. For example, database servers, Web servers, DNS servers, and directory servers can be represented by this class. This class corresponds to the DMTF CIM_SoftwareFeature class.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherSoftwareServerType__c</fullName>
        <label>Other Software Server Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SoftwareServerType__c</fullName>
        <label>Software Server Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>DatabaseServer</fullName>
                </value>
                <value>
                    <fullName>CommunicationServer</fullName>
                </value>
                <value>
                    <fullName>MessageServer</fullName>
                </value>
                <value>
                    <fullName>PrintServer</fullName>
                </value>
                <value>
                    <fullName>SecurityServer</fullName>
                </value>
                <value>
                    <fullName>TransactionServer</fullName>
                </value>
                <value>
                    <fullName>ResourceServer</fullName>
                </value>
                <value>
                    <fullName>TelnetServer</fullName>
                </value>
                <value>
                    <fullName>FTPServer</fullName>
                </value>
                <value>
                    <fullName>MailServer</fullName>
                </value>
                <value>
                    <fullName>DNSServer</fullName>
                </value>
                <value>
                    <fullName>UDDIServer</fullName>
                </value>
                <value>
                    <fullName>LDAPServer</fullName>
                </value>
                <value>
                    <fullName>WEBServer</fullName>
                </value>
                <value>
                    <fullName>NewsServer</fullName>
                </value>
                <value>
                    <fullName>ConfigurationMngtAgent</fullName>
                </value>
                <value>
                    <fullName>WebServicesServer</fullName>
                </value>
                <value>
                    <fullName>BusinessProcessServer</fullName>
                </value>
                <value>
                    <fullName>SecureShellServer</fullName>
                </value>
                <value>
                    <fullName>J2EEServer</fullName>
                </value>
                <value>
                    <fullName>SAPMessageServer</fullName>
                </value>
                <value>
                    <fullName>SAPEnqueueServer</fullName>
                </value>
                <value>
                    <fullName>SAPDispatcherServer</fullName>
                </value>
                <value>
                    <fullName>SAPGatewayServer</fullName>
                </value>
                <value>
                    <fullName>SAPICMServer</fullName>
                </value>
                <value>
                    <fullName>SAPJ2EEDispatcher</fullName>
                </value>
                <value>
                    <fullName>SAPSDMServer</fullName>
                </value>
                <value>
                    <fullName>SAPXIIntegrationEngine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Software Server</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_SoftwareServer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>